--- a/InternManagement/Pages/Account/InternshipApplication.cshtml
+++ b/InternManagement/Pages/Account/InternshipApplication.cshtml
@@ -69,12 +69,12 @@
                         <span asp-validation-for="Intern.Birthday" class="text-danger"></span>
                     </div>
                     <div class="form-group mb-3">
-                        <label asp-for="Intern.TeamId" class="control-label">Select Team</label>
-                        <select asp-for="Intern.TeamId" class="form-control" asp-items="Model.Teams">
+                        <label asp-for="SelectedTeamId" class="control-label">Select Team</label>
+                        <select asp-for="SelectedTeamId" class="form-control" asp-items="Model.Teams">
                             <option value="">-- Select Team --</option>
                         </select>
-                        <span asp-validation-for="Intern.TeamId" class="text-danger"></span>
-                    </div>             
+                        <span asp-validation-for="SelectedTeamId" class="text-danger"></span>
+                    </div>
                     <div class="form-group mb-3">
                         <label asp-for="Intern.InternshipStartingDate" class="control-label">Start Date</label>
                         <input asp-for="Intern.InternshipStartingDate" class="form-control" type="date" />
