--- a/InternManagement/Pages/Shared/_Layout.cshtml
+++ b/InternManagement/Pages/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
         new { Text = "Intern Application", Icon = "briefcase", Link = Url.Page("/Admin/ApproveInternships") },
         new { Text = "Upload Document", Icon = "briefcase", Link = Url.Page("/Admin/ApproveInternships") },
         new { Text = "Assignment", Icon = "briefcase", Link = Url.Page("/Assignments/AssignmentManagement") },
-
+        new { Text = "Schedule Interview", Icon = "briefcase", Link = Url.Page("/Interviews/Index") },
         };
 
             var reportItems = new[]
@@ -133,13 +133,13 @@
                 @foreach (var item in menuItems)
                 {
                     // Hide items for Intern role
-                    if (user.IsInRole("Intern") && (item.Text == "Interns" || item.Text == "Intern Application" || item.Text == "Add User/Team" || item.Text == "Assignment"))
+                    if (user.IsInRole("Intern") && (item.Text == "Interns" || item.Text == "Intern Application" || item.Text == "Add User/Team" || item.Text == "Assignment" || item.Text == "Interview Management" || item.Text == "Schedule Interview"))
                     {
                         continue;
                     }
 
                     // Hide items for Supervisor role
-                    if (user.IsInRole("Supervisor") && (item.Text == "Add User/Team" || item.Text == "My Profile" || item.Text == "Upload Document" || item.Text== "My Profile"))
+                    if (user.IsInRole("Supervisor") && (item.Text == "Add User/Team" || item.Text == "My Profile" || item.Text == "Upload Document" || item.Text == "My Profile" || item.Text == "Interview Management" || item.Text == "Schedule Interview"))
                     {
                         continue;
                     }
