--- a/InternManagement/Pages/Interns/ManageInterns.cshtml
+++ b/InternManagement/Pages/Interns/ManageInterns.cshtml
@@ -42,7 +42,14 @@
             @foreach (var intern in Model.Interns)
             {
                 <tr>
-                    <td>@intern.PhotoUrl</td>
+                    <td>
+                        @if (intern.PhotoUrl != null && intern.PhotoUrl.Length > 0)
+                        {
+                            var base64Photo = Convert.ToBase64String(intern.PhotoUrl);
+                            var imgSrc = String.Format("data:image/jpeg;base64,{0}", base64Photo);
+                            <img src="@imgSrc" alt="Intern Photo" class="img-thumbnail" style="max-width: 200px;" />
+                        }
+                    </td>
                     <td>
                         <a href="#" class="intern-details-link" data-bs-toggle="modal" data-bs-target="#internDetailsModal" data-id="@intern.InternId">
                             @intern.FullName
